JSW Devsb/src/objects/Conversion__c.object
<CustomObject>
    <fields>
        <fullName>Account_Dealer_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account/Dealer/Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Conversions</relationshipLabel>
        <relationshipName>Conversions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Conversions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conversion_Owner__c</fullName>
        <label>Conversion Owner</label>
        <picklist>
            <picklistValues>
                <fullName>TSO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATF</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Number__c</fullName>
        <label>Customer Contact Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Communication__c</fullName>
        <label>Date of Communication</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Influencer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Influencer</label>
        <referenceTo>Influencer__c</referenceTo>
        <relationshipLabel>Conversions</relationshipLabel>
        <relationshipName>Conversions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LATF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LATF</label>
        <referenceTo>LATF__c</referenceTo>
        <relationshipLabel>Conversions</relationshipLabel>
        <relationshipName>Conversions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_in_MT__c</fullName>
        <label>Quantity in MT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>Project_Site__c</referenceTo>
        <relationshipLabel>Conversions</relationshipLabel>
        <relationshipName>Conversions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Owner:User.State</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Conversion__c</fullName>
        <label>Type of Conversion</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat_Order</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Product__c</fullName>
        <label>Type of Product</label>
        <picklist>
            <picklistValues>
                <fullName>PSC</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Concreel HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GGBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visit_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit Report</label>
        <referenceTo>Visit_Report__c</referenceTo>
        <relationshipLabel>Conversions</relationshipLabel>
        <relationshipName>Conversions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Conversion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Type_of_Product__c</columns>
        <columns>Date_of_Communication__c</columns>
        <columns>Customer_Contact_Number__c</columns>
        <columns>NAME</columns>
        <columns>Account_Dealer_Customer__c</columns>
        <columns>Type_of_Conversion__c</columns>
        <columns>Quantity_in_MT__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Conversion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conversions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>